--- a/src/Components/CurrentWeather/CurrentWeather.css
+++ b/src/Components/CurrentWeather/CurrentWeather.css
@@ -5,14 +5,53 @@
   background-color: #fff;
   background-color: #333;
   margin: 20px auto 0 auto;
+  padding: 0 20px 20px 20px;
 }
 
-.top {
+.top,
+.bottom {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 20px 20px 20px;
+}
+.city {
+  font-family: 600px;
+  font-size: 18px;
+  line-height: 1;
+  margin: 0;
+  letter-spacing: 1px;
+}
+.weather {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1;
+  margin: 0;
 }
 .weather-img {
   width: 100px;
+}
+.temperature {
+  font-weight: 600;
+  font-size: 70px;
+  letter-spacing: -5px;
+  margin: 10px 0;
+  width: auto;
+}
+.details {
+  width: 100%;
+  padding-left: 20px;
+}
+.parameter-row {
+  display: flex;
+  justify-content: space-between;
+}
+.label {
+  text-align: left;
+  font-weight: 400;
+  font-size: 12px;
+}
+.value {
+  text-align: right;
+  font-family: 600;
+  font-size: 12px;
 }
