--- a/src/Components/Forecast/Forecast.css
+++ b/src/Components/Forecast/Forecast.css
@@ -2,6 +2,7 @@
   font-size: 23px;
   font-weight: 700;
   margin: 0px 10px 0 5px;
+  margin-bottom: 10px;
 }
 .daily-item {
   background-color: #f5f5f5;
@@ -13,6 +14,9 @@
   display: flex;
   align-items: center;
   font-size: 15px;
+}
+.accordion {
+  margin-top: 15px;
 }
 .icon-small {
   width: 40px;
