--- a/src/Components/CurrentWeather/CurrentWeather.css
+++ b/src/Components/CurrentWeather/CurrentWeather.css
@@ -1,10 +1,9 @@
 .weather-container {
-  width: 300px;
+  max-width: 300px;
   border-radius: 6px;
-  box-shadow: 10px -2px 20px 2px rgb(0 0 0 / 30%);
   background-color: #fff;
   background-color: #333;
-  margin: 20px auto 0 auto;
+  margin: 20px auto;
   padding: 0 20px 20px 20px;
   color: #fff;
 }
