--- a/src/Components/Forecast/Forecast.css
+++ b/src/Components/Forecast/Forecast.css
@@ -1,14 +1,13 @@
 .title {
   font-size: 23px;
   font-weight: 700;
-  margin: 0px 10px 0 5px;
-  margin-bottom: 10px;
+  margin: 12px 0;
 }
 .daily-item {
   background-color: #f5f5f5;
   border-radius: 15px;
   cursor: pointer;
-  margin: 5px;
+  margin: 5px 0;
   height: 40px;
   padding: 5px 20px;
   display: flex;
@@ -54,10 +53,4 @@
 }
 .forecast-details-grid-items label:last-child {
   color: #212121;
-}
-
-@media (max-width: 600px) {
-  .forecast-container {
-    padding: 20px;
-  }
 }
